Fri Feb 24 21:16:48 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_config_handlers.mpb

          Add a verbatim to disable hidden_visibility for project
          dependent on Config_Handlers

Fri Feb 24 19:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          If we can't chdir to the directory then don't die, but just continue
          with the next test

Fri Feb 24 17:29:47 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Truncate.h: Include all needed code inline here and mark the
          function and specialization inline.
        * ace/Truncate.{inl cpp}: Removed. All code for ACE_Truncate is inlined
          and included in the Truncate.h file.

        * ace/ace.mpc:
        * ace/Makefile.am: Removed Truncate.cpp and Truncate.inl.

Fri Feb 24 16:31:36 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Connector.{h cpp}: Changed the non_blocking_handles_ member
          used to remember handles currently in-progress with a non-blocking
          connect from ACE_Handle_Set to ACE_Unbounded_Set. This enables
          ACE_Connector to be used with handle values outside the range
          that select() can deal with (FD_SETSIZE) and is needed to run
          large numbers of handles as is now possible with the
          ACE_Dev_Poll_Reactor.
          Removed the deprecated internal-only
          SVC_HANDLER* ACE_NonBlocking_Connect_Handler::close (void)
          method. There was already a replacement close() with more
          sensible arguments that performed close operations in the correct
          order, avoiding accesses to event handlers that were deleted.
          Don't ACE_ASSERT when seeing a ACE_Connector::close() error; log
          an error and keep going.

        * ace/Container_Instantiations.cpp: Added instantiations for
          ACE_Unbounded_Set<ACE_HANDLE>, used in ACE_Connector.
